--- a/css_menu.css
+++ b/css_menu.css
@@ -2,4 +2,44 @@
     display:flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.imagem{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    height: 2.5rem;
+    flex-grow: 2;
+}
+.linha{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 2;
+}
+.vestibular{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1.65;
+}
+.aviso{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 2; 
+}
+.linha_separar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 30%;
+    border: 2px solid #000000;
+    background-color: #000000;
 }
