--- a/css_insper.css
+++ b/css_insper.css
@@ -5,18 +5,45 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+
 }
+
 .hamburguer{
     display: flex;
     flex-direction: row;
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    width: 100%;
+    height: 3rem;
+}
+.cabecario {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    width: 26%;
 }
 .corpo{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-color: black;
+    padding: 1rem;
+    border: 2px solid ;
+    width: 100%;
 }
-.voltar{height: 4rem;}
+.voltar{
+    height: 2rem;
+    transform: rotate(90deg);
+
+}
+.retorno{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.linha_separar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    border: 1px solid #000000;
+    background-color: #000000;
+}
