--- a/css_status.css
+++ b/css_status.css
@@ -25,3 +25,10 @@
     padding: .5rem;
     border: 2px solid #000000;
 }
+
+.title{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
