--- a/html/css/css_hamburguer.css
+++ b/html/css/css_hamburguer.css
@@ -1,16 +1,16 @@
 .cabecario{
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
 }
 .falso_body {
     display:flex;
     flex-direction: column;
     height: 100%;
-    width: 100%;
+    width: 50%;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     
 
 }
