--- a/html/css/css_estudo.css
+++ b/html/css/css_estudo.css
@@ -2,18 +2,12 @@
     display:flex;
     flex-direction: column;
     height: 100%;
-    justify-content: center;
-    align-items: center;
-}
-.cabecario{
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    width: 26%;
+    width: 100%;
 }
 .hamburguer{
-    display: flex;
-    flex-direction: row;
+    position: absolute;
+    top:1px;
+    left: 1px;
     height: 3rem;
 }
 .corpo{
@@ -21,6 +15,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .title{
@@ -41,4 +36,10 @@
 .quadrado{
     padding: .5rem;
     border: 2px solid #000000;
+}
+h1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
