--- a/html/css/css_index.css
+++ b/html/css/css_index.css
@@ -7,18 +7,17 @@
     align-items: center;
 }
 .imagem{
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    height: 2.5rem;
-    flex-grow: 2;
+    position: absolute;
+    right: 1px;
+    top: 6rem;
+    height: 3rem;
 }
 .linha{
     display: flex;
     flex-direction: row;
     width: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
     flex-grow: 2;
 }
 .vestibular{
@@ -28,18 +27,12 @@
     align-items: center;
     flex-grow: 1.65;
 }
-.aviso{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 2; 
-}
+
 .linha_separar{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 30%;
+    width: 100%;
     border: 2px solid #000000;
     background-color: #000000;
 }
@@ -48,6 +41,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-grow: 1.65;
     height: 2.5rem;
+}
+h2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
