--- a/html/css/css_insper.css
+++ b/html/css/css_insper.css
@@ -9,23 +9,21 @@
 }
 
 .hamburguer{
-    display: flex;
-    flex-direction: row;
+    position: absolute;
+    top:1px;
+    left: 1px;
     height: 3rem;
 }
-.cabecario {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    width: 26%;
-}
+
 .corpo{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     border-color: black;
-    padding: 1rem;
+    padding-left: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-right: 0.3rem;
     border: 2px solid ;
     width: 100%;
 }
@@ -46,4 +44,9 @@
     width: 100%;
     border: 1px solid #000000;
     background-color: #000000;
+}
+h1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
