--- a/html/css/css_regras.css
+++ b/html/css/css_regras.css
@@ -6,19 +6,12 @@
     justify-content: center;
     align-items: center;
 }
-.cabecario{
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    width: 20%;
-}
 
-.hamburguer{
+h1{
     display: flex;
     flex-direction: row;
-    height: 3rem;
-    
+    justify-content: center;
+    width: 100%;
 }
 
 .vestibular{
@@ -38,4 +31,10 @@
 .quadrado{
     padding: .5rem;
     border: 2px solid #000000;
+}
+.hamburguer{
+    position: absolute;
+    top:1px;
+    left: 1px;
+    height: 3rem;
 }
