--- a/html/css/css_status.css
+++ b/html/css/css_status.css
@@ -7,20 +7,6 @@
     align-items: center;
 }
 
-.cabecario{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    width: 26%;
-}
-
-.hamburguer{
-    display: flex;
-    flex-direction: row;
-    height: 3rem;
-}
-
 .quadrado{
     padding: .5rem;
     border: 2px solid #000000;
@@ -31,4 +17,16 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.hamburguer{
+    position: absolute;
+    top:1px;
+    left: 1px;
+    height: 3rem;
+}
+h1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
