--- a/html/css/css_estudo.css
+++ b/html/css/css_estudo.css
@@ -29,17 +29,25 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    border: 1px solid #000000;
-    background-color: #000000;
+    border: 2px solid hsl(178, 0%, 50%);
+    background-color: hsl(178, 0%, 50%);
 }
 
 .quadrado{
     padding: .5rem;
-    border: 2px solid #000000;
+    border: 5px solid hsl(178, 0%, 50%);
+    background-color: rgb(255, 255, 255);
 }
 h1{
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    font-family: 'Hind', sans-serif;
 }
+html{
+    background-color: hsl(204, 100%, 77%);
+}
+h2{font-family: 'Hind', sans-serif;}
+p{font-family: 'Crimson Text', serif;
+font-size: 1.3rem;}
