--- a/html/css/css_regras.css
+++ b/html/css/css_regras.css
@@ -30,7 +30,8 @@ h1{
 }
 .quadrado{
     padding: .5rem;
-    border: 2px solid #000000;
+    border: 5px solid hsl(178, 0%, 50%);
+    background-color: rgb(255, 255, 255);
 }
 .hamburguer{
     position: absolute;
@@ -38,3 +39,10 @@ h1{
     left: 1px;
     height: 3rem;
 }
+html{
+    background-color: hsl(204, 100%, 77%);
+}
+h2{font-family: 'Hind', sans-serif;}
+p{font-family: 'Crimson Text', serif;
+font-size: 1.3rem;}
+h1{font-family: 'Hind', sans-serif;}
