--- a/html/css/css_hamburguer.css
+++ b/html/css/css_hamburguer.css
@@ -1,10 +1,10 @@
-.cabecario{
+.cabecario2{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-.falso_body {
+.falso_body2 {
     display:flex;
     flex-direction: column;
     height: 100%;
@@ -14,7 +14,7 @@
     
 
 }
-.listagem{
+.listagem2{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -22,17 +22,17 @@
     padding: 1rem;
     border: 3px solid hsl(178, 0%, 50%);
 }
-.icone{
+.icone2{
     height: 3rem;
     align-items: center;
     filter: brightness(0%);
 }
-.voltar{
+.voltar2{
     height: 3rem;
     transform: rotate(90deg);
 
 }
-.quadrado{padding: 1rem;
+.quadrado2{padding: 1rem;
     border: 5px solid hsl(178, 0%, 50%);
     background-color: hsl(23, 72%, 53%);
 
