--- a/html/css/css_regras.css
+++ b/html/css/css_regras.css
@@ -46,3 +46,42 @@ h2{font-family: 'Hind', sans-serif;}
 p{font-family: 'Crimson Text', serif;
 font-size: 1.3rem;}
 h1{font-family: 'Hind', sans-serif;}
+.cabecario2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.falso_body2 {
+    display:none;
+    flex-direction: column;
+    height: 100%;
+    width: 50%;
+    justify-content: center;
+    align-items: flex-start;
+    
+
+}
+.listagem2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    border: 3px solid hsl(178, 0%, 50%);
+}
+.icone2{
+    height: 3rem;
+    align-items: center;
+    filter: brightness(0%);
+}
+.voltar2{
+    height: 3rem;
+    transform: rotate(90deg);
+
+}
+.quadrado2{padding: 1rem;
+    border: 5px solid hsl(178, 0%, 50%);
+    background-color: hsl(23, 72%, 53%);
+
+}
