--- a/html/css/css_index.css
+++ b/html/css/css_index.css
@@ -9,8 +9,8 @@
 .imagem{
     position: absolute;
     right: 1px;
-    top: 7.5rem;
-    height: 3rem;
+    top: 4rem;
+    height: 2.5rem;
 }
 .linha{
     display: flex;
@@ -26,13 +26,14 @@
     justify-content: center;
     align-items: center;
     flex-grow: 1.65;
+    font-size: 100%;
 }
 
 .linha_separar{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
+    width: 95%;
     border: 2px solid #000000;
     background-color: #000000;
 }
@@ -49,10 +50,32 @@ h2{
     justify-content: center;
     width: 100%;
     font-family: 'Hind', sans-serif;
+    
 }
 html{
     background-color: hsl(204, 100%, 77%);
+    font-size: 140%;
 }
 h1{
     font-family: 'Hind', sans-serif;
 }
+a { color: inherit; 
+    text-decoration: none} 
+body {
+        line-height:1.6;
+    }
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0.25rem;}
