--- a/html/css/css_regras.css
+++ b/html/css/css_regras.css
@@ -41,11 +41,14 @@ h1{
 }
 html{
     background-color: hsl(204, 100%, 77%);
+    font-size: 110%;
 }
-h2{font-family: 'Hind', sans-serif;}
+h2{font-family: 'Hind', sans-serif;
+    font-size: 120%;}
 p{font-family: 'Crimson Text', serif;
-font-size: 1.3rem;}
-h1{font-family: 'Hind', sans-serif;}
+    font-size: 120%}
+h1{font-family: 'Hind', sans-serif;
+font-size: 150%;}
 .cabecario2{
     display: flex;
     flex-direction: row;
@@ -55,33 +58,51 @@ h1{font-family: 'Hind', sans-serif;}
 .falso_body2 {
     display:none;
     flex-direction: column;
-    height: 100%;
+    position: absolute;
+    top: 5%;
     width: 50%;
-    justify-content: center;
     align-items: flex-start;
     
-
 }
 .listagem2{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    padding: 0.5rem;
     border: 3px solid hsl(178, 0%, 50%);
 }
 .icone2{
-    height: 3rem;
+    height: 2rem;
     align-items: center;
     filter: brightness(0%);
 }
 .voltar2{
-    height: 3rem;
+    height: 2rem;
     transform: rotate(90deg);
 
 }
-.quadrado2{padding: 1rem;
+.quadrado2{padding: 0.8rem;
     border: 5px solid hsl(178, 0%, 50%);
     background-color: hsl(23, 72%, 53%);
 
 }
+a { color: inherit; 
+    text-decoration: none} 
+body {
+        line-height:1.6;
+    }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0.25rem;}
