--- a/html/css/css_insper.css
+++ b/html/css/css_insper.css
@@ -71,7 +71,7 @@ p{font-family: 'Crimson Text', serif;
     display:none;
     flex-direction: column;
     position: absolute;
-    top: 5%;
+    top: 0%;
     width: 50%;
     align-items: flex-start;
     
@@ -81,7 +81,7 @@ p{font-family: 'Crimson Text', serif;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 0.5rem;
+    padding: 0.3rem;
     border: 3px solid hsl(178, 0%, 50%);
 }
 .icone2{
@@ -117,3 +117,6 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
     margin: 0.25rem;}
+body {
+        line-height:1.6;
+    }
